55_K8S_Extended/03.Network/manifests/01-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  selector:
    matchLabels:
      app: backend
  
  template:
    metadata:
      labels:
        app: backend
    

    spec:
      containers:
      - name: backend
  
        image: wbitt/network-multitool:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
