55_K8S_Extended/03.Network/manifests/02-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    matchLabels:
      app: frontend
  
  
  template:
    metadata:
      labels:
        app: frontend
    
    

    spec:
      containers:
      - name: frontend
  
  
        image: wbitt/network-multitool:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80
