55_K8S_Extended/03.Network/manifests/03-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: app
spec:
  selector:
    matchLabels:
      app: cache
  
  template:
    metadata:
      labels:
        app: cache
    

    spec:
      containers:
      - name: cache
  
        image: wbitt/network-multitool:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
  - port: 80
    targetPort: 80
