55_K8S_Extended/03.Network/manifests/04-allow-for-front-and-back.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-frontend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-backend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cache
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
